# UnmannedGrabbingVehicle-Sim

./: .gitignore  2020-12-10-14-07-04.bag  README.md
devel/: .catkin  setup.sh
devel/lib/excavator/: excavator_node
devel/lib/pkgconfig/: excavator.pc  velodyne_description.pc  velodyne_gazebo_plugins.pc
devel/share/excavator/cmake/: excavatorConfig.cmake
devel/share/velodyne_description/cmake/: velodyne_descriptionConfig.cmake
devel/share/velodyne_gazebo_plugins/cmake/: velodyne_gazebo_pluginsConfig.cmake
src/excavator/: CMakeLists.txt  README.md
src/excavator/config/: display.rviz  joint_names_excavator.yaml
src/excavator/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
src/excavator/devel/lib/pkgconfig/: excavator.pc
src/excavator/devel/share/excavator/cmake/: excavatorConfig.cmake
src/excavator/include/: controller.h
src/excavator/launch/: gazebo_models.launch  gazebo_world.launch  rviz.launch
src/excavator/log/: excavator_node.INFO  excavator_node.WARNING  infolog_20201121-003052.10702  infolog_20201121-003117.10748  infolog_20201121-003131.10793  infolog_20201121-003339.10923  infolog_20201121-003357.10964  infolog_20201121-003458.11030  infolog_20201121-003538.11091  infolog_20201121-003556.11133  infolog_20201121-004742.12406  infolog_20201121-004951.12593  infolog_20201121-005045.12867  infolog_20201121-005056.12920  infolog_20201121-005120.12967  infolog_20201121-005146.13074  infolog_20201121-005355.13435  infolog_20201121-013026.14586  infolog_20201121-013124.14641  infolog_20201121-013142.14671  infolog_20201121-013153.14707  infolog_20201121-013208.14739  infolog_20201121-013239.14795  infolog_20201121-013259.14852  infolog_20201121-013313.14881  infolog_20201121-013341.14940  infolog_20201121-113430.3816  infolog_20201121-114143.4062  infolog_20201121-114953.4675  infolog_20201121-115324.4925  infolog_20201121-115443.5039  infolog_20201121-115758.5106  infolog_20201121-120156.5912  infolog_20201121-155359.14392  infolog_20201121-162628.3720  infolog_20201121-163321.4893  infolog_20201121-170903.7829  infolog_20201122-163546.7829  infolog_20201122-163817.7938  infolog_20201122-164020.8054  (+46 more)
src/excavator/meshes/: Top_link.STL  arm_link1.STL  arm_link3.STL
src/excavator/models/stone1/: model.config
src/excavator/src/: CMakeLists.txt
src/excavator/src/PointCloudProcess/: PointCloudFusion.cpp
src/excavator/urdf/: example.urdf.xacro  excavator.csv  excavator.urdf  excavator.xacro
src/excavator/world/: mountain.world  quanzhou.world  sandland.world
src/gazebo_simulation/: README.md
src/gazebo_simulation/lidar_simulation/velodyne_simulator/velodyne_description/rviz/: example.rviz
src/gazebo_simulation/lidar_simulation/velodyne_simulator/velodyne_description/urdf/: example.urdf.xacro
src/gazebo_simulation/lidar_simulation/velodyne_simulator/velodyne_gazebo_plugins/: CMakeLists.txt
src/gazebo_simulation/lidar_simulation/velodyne_simulator/velodyne_gazebo_plugins/include/velodyne_gazebo_plugins/: GazeboRosLidarModel.h
src/gazebo_simulation/lidar_simulation/velodyne_simulator/velodyne_gazebo_plugins/src/: GazeboRosLidarModel.cpp  GazeboRosVelodyneLaser.cpp
src/gazebo_simulation/robot_simulation/robot_controller/: CMakeLists.txt  package.xml
src/gazebo_simulation/robot_simulation/robot_controller/src/: CMakeLists.txt
src/gazebo_simulation/robot_simulation/robot_controller/src/controller/: controller.cpp
src/gazebo_simulation/robot_simulation/robot_description/meshes/: arm_link2.STL
src/gazebo_simulation/robot_simulation/robot_description/urdf/: CameraSensor.xacro  example.urdf.xacro  excavator.xacro
src/gazebo_simulation/robot_simulation/robot_gazebo/config/: display.rviz
src/gazebo_simulation/robot_simulation/robot_gazebo/launch/: gazebo_models.launch  gazebo_world.launch  rviz.launch
src/gazebo_simulation/robot_simulation/robot_gazebo/models/stone1/: model.sdf
src/gazebo_simulation/robot_simulation/robot_gazebo/models/stone1/meshes/: stone.stl
src/gazebo_simulation/robot_simulation/robot_gazebo/world/: bayland.world
src/object_recognition/PointNet/ROSbridge/: classify_node.py  test.py
src/object_recognition/PointNet/pointnet/: dataset.py
src/pointcloud_process/: CMakeLists.txt  package.xml
src/pointcloud_process/config/: config.yaml
src/pointcloud_process/include/: pointcloudprocess.h  pointcloudsegment.h
src/pointcloud_process/launch/: pointcloud_process.launch
src/pointcloud_process/src/: ProcessNode.cpp  pointcloudprocess.cpp  pointcloudsegment.cpp
src/velodyne_simulator/: README.md
src/velodyne_simulator/velodyne_description/launch/: example.launch
src/velodyne_simulator/velodyne_description/urdf/: LiDAR-80.xacro  VLP-16.urdf.xacro
