aux_source_directory(./controller src)
############################################################################################
##################################### Generate Ros node  ###################################
############################################################################################
add_executable(controller ${src})
target_link_libraries(controller ${ALL_LIBS} )